# HunyuanOCR-ncnn

./: .gitattributes  .gitignore  CMakeLists.txt  NOTICE  README.md  README_en.md  README_zh.md
.github/workflows/: linux-ci.yml  windows-compile.yml
benchmark/: README.md
docs/superpowers/plans/: 2026-07-16-runtime-batch.md
docs/superpowers/specs/: 2026-07-16-runtime-batch-design.md
examples/: EXPECTED_OUTPUTS.md  IMAGE_SOURCES.md  README.md  custom_prompt_cases.json  ocr_main.cpp  regression_cases.json
export/: README.md  _common.py  add_kvcache.py  dflash_export.py  export_all.py  export_dflash.py  export_lm_head.py  export_text_decoder_kv.py  export_text_embed.py  export_vision_dynamic.py  extract_tokenizer.py  patch_innerproduct_m1.py  text_decoder_kv.py
include/hunyuan_ocr/: dflash_runtime.h  generation_config.h  hunyuan_ocr.h  image_preprocessor.h  model_layout.h  multimodal_rope.h  precise_sdpa.h  prompt_builder.h  text_runtime.h  tokenizer.h  utf8.h  vision_runtime.h
models/: README.md  model.json.example
patches/ncnn/: 0001-vulkan-matmul-pr6579.patch  0002-vulkan-exact-gelu.patch  0003-vulkan-rotaryembed-full-cache.patch  0004-vulkan-gemm-m1.patch  0004-vulkan-innerproduct-m1.patch  LICENSE.ncnn.txt  series
scripts/: apply_ncnn_patches.py  export_and_package_linux.sh  quickstart_existing_model.sh  smoke_test.sh
src/: batch_jsonl.cpp  batch_jsonl.h  cli_benchmark.cpp  cli_benchmark.h  cli_fixture.cpp  cli_fixture.h  cli_options.cpp  cli_options.h  dflash_runtime.cpp  generation_config.cpp  hunyuan_ocr.cpp  image_preprocessor.cpp  interactive_cli.cpp  interactive_cli.h  kv_cache_capacity.cpp  kv_cache_capacity.h  main.cpp  mapped_model_file.cpp  mapped_model_file.h  model_layout.cpp  multimodal_rope.cpp  precise_sdpa.cpp  precise_sdpa_policy.h  precise_sdpa_profile.h  prompt_builder.cpp  text_backend_policy.h  text_decoder_step.h  text_decoder_vulkan_session.cpp  text_runtime.cpp  tokenizer.cpp  utf8.cpp  vision_runtime.cpp  vision_vulkan_policy.h
tests/: CMakeLists.txt  artifact_paths_test.py  atomic_output_test.py  batch_jsonl_test.cpp  benchmark_parser_test.py  cli_options_test.py  cli_structure_test.py  decoder_microbench.cpp  decoder_microbench.h  decoder_microbench_main.cpp  decoder_microbench_parser_test.cpp  dflash_probe_integration_test.cpp  dflash_runtime_test.cpp  export_common_test.py  export_dflash_test.py  export_vision_dynamic_test.py  extract_tokenizer_test.py  generation_config_test.cpp  hunyuan_ocr_api_test.cpp  hunyuan_ocr_runtime_integration_test.cpp  install_cli_test.py  interactive_cli_test.cpp  kv_cache_lifecycle_test.cpp  linux_workflow_test.py  mapped_model_file_test.cpp  memory_lifecycle_test.cpp  model_load_probe.cpp  multimodal_rope_test.cpp  native_innerproduct_m1.cpp  native_innerproduct_m1.h  native_innerproduct_m1_main.cpp  native_innerproduct_m1_test.cpp  ncnn_patch_bundle_test.py  ocr_example_test.py  package_model_test.py  patch_innerproduct_m1_test.py  precise_sdpa_test.cpp  prepare_regression_fixtures_test.py  prompt_builder_test.cpp  quickstart_test.py  (+15 more)
tools/: README.md  atomic_output.py  benchmark.py  package_model.py  prepare_regression_fixtures.py  run_5sample_regression.py  run_example.py  run_examples.py  run_hf_baseline.py  run_regression.py
